--- a/symfony-project/templates/dashboard/dashboardEnterprise.html.twig
+++ b/symfony-project/templates/dashboard/dashboardEnterprise.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 	<style>
 		.text-marine {
-			color:rgb(1, 29, 56); /* Bleu marine */
+			color: rgb(1, 29, 56); /* Bleu marine */
 		}
 
 		.fw-bold {
@@ -259,6 +259,9 @@
 							</div>
 
 
-						</main>
+						</div>
 					</div>
-				{% endblock %}
+				</div>
+			</main>
+		</div>
+	{% endblock %}
