--- a/symfony-project/templates/matching/index.html.twig
+++ b/symfony-project/templates/matching/index.html.twig
@@ -72,7 +72,7 @@
 						{% endif %}
 					{% endfor %}
 					{% if not hasMatches %}
-						<p class="text-center w-100">Aucune offre avec un score supérieur à 49%.</p>
+						<p class="bg-primary text-white text-center w-100">Aucune offre avec un score supérieur à 49%.</p>
 					{% endif %}
 				</div>
 			</div>
