--- a/symfony-project/templates/navbarDev.html.twig
+++ b/symfony-project/templates/navbarDev.html.twig
@@ -99,7 +99,7 @@
 										<li>
 											<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard')}}">
 											<i class="bi bi-gear"></i>
-											Paramètres</a>
+											Dashboard</a>
 										</li>
 										<li>
 											<a class="text-black" href="{{path('app_favori')}}">
