--- a/symfony-project/templates/notification/notification_company.html.twig
+++ b/symfony-project/templates/notification/notification_company.html.twig
@@ -20,7 +20,7 @@
 								<div>
 									<strong>{{ notification.message }}</strong><br>
 								</div>
-								<a href="{{ path('developer_detail', {'id': notification.job.id}) }}" class="btn btn-primary btn-sm">
+								<a href="{{ path('developer_detail', {'id': notification.developer.id}) }}" class="btn btn-primary btn-sm">
 									Voir le profil
 								</a>
 							</li>
