--- a/symfony-project/templates/base.html.twig
+++ b/symfony-project/templates/base.html.twig
@@ -47,169 +47,158 @@
 								<li>
 									<a class="text-black" href="{{path('app_profil')}}">Profils</a>
 								</li>
-								<li>
-									<a class="text-black" href="{{path('match-dev')}}">Matching</a>
-								</li>
-								<li>
-									<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
-								</li>
-								<li>
-									<a class="text-black" href="{{ path('app_notifications_company') }}">
-										Notifications
-										<span class="icon-notifications"></span>
-									</a>
-								</li>
+								{% if app.session.get('user_id') is not empty %}
+
+									<li>
+										<a class="text-black" href="{{path('match-dev')}}">Matching</a>
+									</li>
+								{% endif %}
+
+								{% if app.session.get('user_id') is not empty %}
+
+									<li>
+										<a class="text-black" href="{{path('create_fiche_de_poste')}}">Fiches de postes</a>
+									</li>
+								{% endif %}
+
+								{% if app.session.get('user_id') is not empty %}
+
+									<li>
+										<a class="text-black" href="{{ path('app_notifications_company') }}">
+											Notifications
+											<span class="icon-notifications"></span>
+										</a>
+									</li>
+								{% endif %}
+
 
 								<li class="has-children">
-									<a href="#" class="text-black">Mon compte</a>
+									<a class="text-black" href="#">Mon compte</a>
 									<ul class="dropdown">
-										<li>
-											<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard')}}">
-											<i class="bi bi-gear"></i>
-											Paramètres</a>
-										</li>
-										<li>
-											<a class="text-black" href="{{path('app_favori')}}">
-											<i class="bi bi-heart"></i>
-											Favoris</a>
-											
-										</li>
-										<li>
-											<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_developer_login') }}">
-												<i class="bi bi-box-arrow-right"></i>
-												Déconnexion
-											</a>
-										</li>
+										{% if app.session.get('user_id') is not empty %}
+											<li>
+												<a class="text-black" style="cursor:pointer;" href="{{path('app_dashboard_entreprise')}}">
+													<i class="bi bi-gear"></i>
+													Dashboard</a>
+											</li>
+											<li>
+												<a class="text-black" href="{{path('app_favori_company')}}">
+													<i class="bi bi-heart"></i>
+													Favoris</a>
+											</li>
+											<li>
+												<a class="text-black fw-bold" style="cursor:pointer;" href="{{ path('app_company_login') }}">
+													<i class="bi bi-box-arrow-right"></i>
+													Déconnexion
+												</a>
+											</li>
 
+										{% else %}
+											<li>
+												<a class="text-black text-bold" style="cursor:pointer;" href="{{path('app_company_login')}}">Connexion</a>
+											</li>
+											<li>
+												<a class="text-black text-bold" style="cursor:pointer;" href="{{path('inscription-company')}}">Inscription</a>
+											</li>
+										{% endif %}
 									</ul>
 								</li>
 							</ul>
-
-						</div>
-
-					</div>
-				</nav>
-
-			</div>
-
-			{% block body %}{% endblock %}
-			<div class="site-footer text-black">
-				<div class="container">
-					<div class="row justify-content-between">
-						<div class="col-lg-4">
-							<div class="widget">
-								<h3>À propos</h3>
-								<p class="text-black">
-									AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
-								</p>
-							</div>
-							<div class="widget">
-								<h3>Restez connecté</h3>
-								<ul class="social list-unstyled">
-									<li>
-										<a href="#">
-											<span class="icon-facebook"></span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="icon-twitter"></span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="icon-instagram"></span>
-										</a>
-									</li>
-									<li>
-										<a href="#">
-											<span class="icon-linkedin"></span>
-										</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-
-						<!-- Section Pour les entreprises -->
-						<div class="col-lg-2">
-							<div class="widget">
-								<h3>Pour les entreprises</h3>
-								<ul class="links list-unstyled">
-									<li>
-										<a href="#">Publier une offre</a>
-									</li>
-									<li>
-										<a href="#">Trouver un développeur</a>
-									</li>
-									<li>
-										<a href="#">Nos solutions</a>
-									</li>
-									<li>
-										<a href="#">Évaluer un développeur</a>
-									</li>
-									<li>
-										<a href="#">Assistance</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-
-						<!-- Section Légal -->
-						<div class="col-lg-2">
-							<div class="widget">
-								<h3>Légal</h3>
-								<ul class="links list-unstyled">
-									<li>
-										<a href="#">Mentions légales</a>
-									</li>
-									<li>
-										<a href="#">Politique de confidentialité</a>
-									</li>
-									<li>
-										<a href="#">Conditions générales</a>
-									</li>
-									<li>
-										<a href="#">Politique de cookies</a>
-									</li>
-									<li>
-										<a href="#">FAQ</a>
-									</li>
-								</ul>
-							</div>
-						</div>
-					</div><!-- Bas de page --><div class="row mt-4">
-						<div class="col-12 text-center">
-							<p class="mb-0">
-								Copyright © AdopteUnDev 2024 - Tous droits réservés.
-								<a href="#">Mentions légales</a>
-								|
-								<a href="#">Cookies</a>
-								|
-								<a href="#">Confidentialité</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
+						</li>
+					</ul>
+				</body>
+			</html>
 		</body>
 	</html>
-</div>
-<div id="overlayer"></div>
-<div class="loader">
-	<div class="spinner-border" role="status">
-		<span class="sr-only">Loading...</span>
+</div></div></nav></div>{% block body %}{% endblock %}<div class="site-footer text-black"><div class="container"><div class="row justify-content-between">
+<div class="col-lg-4">
+	<div class="widget">
+		<h3>À propos</h3>
+		<p class="text-black">
+			AdopteUnDev, la plateforme qui connecte développeurs talentueux et entreprises ambitieuses pour un matching parfait. Rejoignez-nous pour construire un avenir numérique collaboratif !
+		</p>
+	</div>
+	<div class="widget">
+		<h3>Restez connecté</h3>
+		<ul class="social list-unstyled">
+			<li>
+				<a href="#">
+					<span class="icon-facebook"></span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span class="icon-twitter"></span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span class="icon-instagram"></span>
+				</a>
+			</li>
+			<li>
+				<a href="#">
+					<span class="icon-linkedin"></span>
+				</a>
+			</li>
+		</ul>
 	</div>
 </div>
-<script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script>
-<script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script>
-<script src="{{asset("js/popper.min.js")}}"></script>
-<script src="{{asset("js/bootstrap.min.js")}}"></script>
-<script src="{{asset("js/owl.carousel.min.js")}}"></script>
-<script src="{{asset("js/aos.js")}}"></script>
-<script src="{{asset("js/imagesloaded.pkgd.js")}}"></script>
-<script src="{{asset("js/isotope.pkgd.min.js")}}"></script>
-<script src="{{asset("js/jquery.animateNumber.min.js")}}"></script>
-<script src="{{asset("js/jquery.stellar.min.js")}}"></script>
-<script src="{{asset("js/jquery.waypoints.min.js")}}"></script>
-<script src="{{asset("js/jquery.fancybox.min.js")}}"></script>
-<script src="{{asset("js/custom.js")}}"></script></body></html>
+
+<!-- Section Pour les entreprises -->
+<div class="col-lg-2">
+	<div class="widget">
+		<h3>Pour les entreprises</h3>
+		<ul class="links list-unstyled">
+			<li>
+				<a href="#">Publier une offre</a>
+			</li>
+			<li>
+				<a href="#">Trouver un développeur</a>
+			</li>
+			<li>
+				<a href="#">Nos solutions</a>
+			</li>
+			<li>
+				<a href="#">Évaluer un développeur</a>
+			</li>
+			<li>
+				<a href="#">Assistance</a>
+			</li>
+		</ul>
+	</div>
+</div>
+
+<!-- Section Légal -->
+<div class="col-lg-2">
+	<div class="widget">
+		<h3>Légal</h3>
+		<ul class="links list-unstyled">
+			<li>
+				<a href="#">Mentions légales</a>
+			</li>
+			<li>
+				<a href="#">Politique de confidentialité</a>
+			</li>
+			<li>
+				<a href="#">Conditions générales</a>
+			</li>
+			<li>
+				<a href="#">Politique de cookies</a>
+			</li>
+			<li>
+				<a href="#">FAQ</a>
+			</li>
+		</ul>
+	</div>
+</div></div><!-- Bas de page --><div class="row mt-4">
+<div class="col-12 text-center">
+	<p class="mb-0">
+		Copyright © AdopteUnDev 2024 - Tous droits réservés.
+		<a href="#">Mentions légales</a>
+		|
+		<a href="#">Cookies</a>
+		|
+		<a href="#">Confidentialité</a>
+	</p>
+</div></div></div></div></body></html></div><div id="overlayer"></div><div class="loader"><div class="spinner-border" role="status"><span class="sr-only">Loading...</span></div></div> <script src="{{ asset("js/jquery-3.5.1.min.js") }}"></script> <script src="{{asset("js/jquery-migrate-3.0.0.min.js")}}"></script> <script src="{{asset("js/popper.min.js")}}"></script> <script src="{{asset("js/bootstrap.min.js")}}"></script> <script src="{{asset("js/owl.carousel.min.js")}}"></script> <script src="{{asset("js/aos.js")}}"></script> <script src="{{asset("js/imagesloaded.pkgd.js")}}"></script> <script src="{{asset("js/isotope.pkgd.min.js")}}"></script> <script src="{{asset("js/jquery.animateNumber.min.js")}}"></script> <script src="{{asset("js/jquery.stellar.min.js")}}"></script> <script src="{{asset("js/jquery.waypoints.min.js")}}"></script> <script src="{{asset("js/jquery.fancybox.min.js")}}"></script> <script src="{{asset("js/custom.js")}}"></script></body></html>
