--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -25,9 +25,9 @@
 						Transformez vos compétences en opportunités exceptionnelles.</h1>
 					<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous donnons vie à des projets uniques en connectant des développeurs passionnés à des entreprises visionnaires, créant ainsi un écosystème dynamique d'innovation et de collaboration.</p>
 					{# {% if app.session.get('user_id') is not empty %}
-																																																											<p class="text-white" data-aos="fade-up" data-aos-delay="200">Bienvenue, utilisateur ID :
-																																																												{{ app.session.get('user_id') }}</p>
-																																																										{% endif %} #}
+																																																																					<p class="text-white" data-aos="fade-up" data-aos-delay="200">Bienvenue, utilisateur ID :
+																																																																						{{ app.session.get('user_id') }}</p>
+																																																																				{% endif %} #}
 
 
 				</div>
@@ -37,32 +37,29 @@
 		<div class="slant" style="background-image: url('images/slant.svg');"></div>
 	</div>
 
-
 	<div class="py-3">
 		<div class="container">
 
-			<div class="owl-logos owl-carousel d-flex justify-center align-center">
-
+			<div class="owl-logos owl-carousel">
 				<div class="item">
-					<img src="https://telecomnancy.univ-lorraine.fr/wp-content/uploads/2022/10/LOGO-ssg-1024x137.png" alt="Image" class="img-fluid">
+					<img src="images/logo-puma.png" alt="Image" class="img-fluid">
 				</div>
 				<div class="item">
-					<img src="https://bim-w.com/wp-content/uploads/3DS_Corp_Logotype_Blue_RGB.png" alt="Image" class="img-fluid">
+					<img src="images/logo-adobe.png" alt="Image" class="img-fluid">
 				</div>
 				<div class="item">
-					<img src="https://rennesbusinessmag.fr/wp-content/uploads/2021/03/Logo_6TM21.png" alt="Image" class="img-fluid">
+					<img src="images/logo-google.png" alt="Image" class="img-fluid">
 				</div>
 				<div class="item">
-					<img src="https://www.digital-aquitaine.com/wp-content/uploads/2024/12/CAPGEMINI47976684200187.png" alt="Image" class="img-fluid">
+					<img src="images/logo-paypal.png" alt="Image" class="img-fluid">
 				</div>
 				<div class="item">
-					<img src="https://cdn.cookielaw.org/logos/9c9e1da5-cb5e-4789-be00-8f37c0e84ef3/2ffce58c-95ef-42c4-9c00-42881e5a0889/7c02a52b-9889-4293-99bd-553ef548c490/Randstad_Digital_Logo.png" alt="Image" class="img-fluid">
+					<img src="images/logo-adobe.png" alt="Image" class="img-fluid">
 				</div>
-
-
+				<div class="item">
+					<img src="images/logo-google.png" alt="Image" class="img-fluid">
+				</div>
 			</div>
-
-
 		</div>
 
 	</div>
