--- a/symfony-project/templates/favori/index.html.twig
+++ b/symfony-project/templates/favori/index.html.twig
@@ -4,7 +4,8 @@
 
 {% block body %}
 
-	<div class="site-section bg-light d-flex min-vh-100">
+	<div class="section-grey bg-light" id="blog-section" style="display:flex; flex-direction:column; justify-content:center; align-items:center; width:100vw ; padding:3rem; margin-top:5rem">
+
 		<div class="container">
 			<div class="row">
 				<h2 class="font-weight-bold text-center text-primary">Vos favoris</h2>
