--- a/symfony-project/templates/matching/matching_entreprise.html.twig
+++ b/symfony-project/templates/matching/matching_entreprise.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Matching Company
+{% block title %}Matching Entreprises
 {% endblock %}
 
 {% block body %}
