dashboard company ok

--- a/symfony-project/templates/company/connexion-entreprise.html.twig
+++ b/symfony-project/templates/company/connexion-entreprise.html.twig
@@ -11,11 +11,11 @@
 
 	<body>
 
-		<div class="container-fluid w-100 vh-100 d-flex justify-content-center align-items-center">
+		<div class="container-fluid w-100 vh-100 d-flex justify-content-center align-items-center" style="padding:5rem;">
 
 			<div class="col-md-5 d-flex justify-content-center align-items-center">
 				<div class="w-100">
-					<h2 class="text-center mb-4">Connexion</h2>
+					<h2 class="mb-4">Connexion</h2>
 					<form method="post" action="{{ path('app_company_login') }}">
 						<div class="form-group">
 							<label for="email">Adresse e-mail</label>
@@ -34,7 +34,7 @@
 				</div>
 			</div>
 			<div class="w-100 vh-100 d-flex justify-content-center align-items-center">
-				<img style="border-radius:2rem; height:90vh" src="https://img.freepik.com/vecteurs-libre/personnes-detenant-icones-cercle-copie-espace-connecte_53876-66231.jpg?ga=GA1.1.576508064.1735162157&semt=ais_hybrid" alt="Image de connexion" class="img-fluid w-100">
+				<img style="height:100vh" src="https://img.freepik.com/vecteurs-libre/concept-compte-phishing_23-2148538969.jpg?semt=ais_hybrid" alt="Image de connexion" class="img-fluid w-100">
 			</div>
 		</div>
 
