--- a/symfony-project/templates/developer/connexion.html.twig
+++ b/symfony-project/templates/developer/connexion.html.twig
@@ -25,7 +25,7 @@
 				<!-- Formulaire de connexion -->
 				<div class="col-md-6 d-flex justify-content-center align-items-center">
 					<div class="w-75">
-						<h2 class="text-center mb-4">Connexion</h2>
+						<h2 class="mb-4">Connexion</h2>
 						<form method="post" action="{{ path('app_developer_login') }}">
 							<div class="form-group">
 								<label for="email">Adresse e-mail</label>
@@ -46,7 +46,7 @@
 
 				<!-- Image de connexion -->
 				<div class="col-md-6 d-flex justify-content-center align-items-center">
-					<img style="border-radius: 2rem; height: 90vh;" src="https://img.freepik.com/photos-gratuite/papier-perfore-maillons-connectes_53876-71201.jpg?t=st=1735420345~exp=1735423945~hmac=d8910c16db68c84f6c708fc107dd39f8eddf334f15aa199dfece6836c77f00d9&w=1800" alt="Image de connexion" class="img-fluid w-100">
+					<img style="border-radius: 2rem; height: 90vh;" src="https://img.freepik.com/vecteurs-libre/illustration-concept-authentification-deux-facteurs_114360-5598.jpg?t=st=1736598320~exp=1736601920~hmac=968ef9d829ac0d6011e942a979ef9977d157ee88a2c0e2cfab8d3f6cc1be11da&w=1380" alt="Image de connexion" class="img-fluid w-100">
 				</div>
 			</div>
 		</div>
