--- a/symfony-project/templates/developer/index.html.twig
+++ b/symfony-project/templates/developer/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'navbarDev.html.twig' %}
-{% block title %}Dashboard Développeur
+{% block title %}Développeur
 {% endblock %}
 
 {% block body %}
@@ -24,12 +24,6 @@
 					<h1 class="text-white font-weight-bold mb-4" data-aos="fade-up" data-aos-delay="0">
 						Transformez vos compétences en opportunités exceptionnelles.</h1>
 					<p class="text-white mb-4" data-aos="fade-up" data-aos-delay="100">Nous donnons vie à des projets uniques en connectant des développeurs passionnés à des entreprises visionnaires, créant ainsi un écosystème dynamique d'innovation et de collaboration.</p>
-					{# {% if app.session.get('user_id') is not empty %}
-																																																																					<p class="text-white" data-aos="fade-up" data-aos-delay="200">Bienvenue, utilisateur ID :
-																																																																						{{ app.session.get('user_id') }}</p>
-																																																																				{% endif %} #}
-
-
 				</div>
 			</div>
 		</div>
