--- a/symfony-project/templates/base.html.twig
+++ b/symfony-project/templates/base.html.twig
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="author" content="Untree.co">
-		<link rel="shortcut icon" href="favicon.png">
+		<link rel="shortcut icon" href="https://cdn0.iconfinder.com/data/icons/job-seeker/256/choose_job_seeker_employee_unemployee_work-512.png">
 
 		<meta name="description" content=""/>
-		<meta name="keywords" content="bootstrap, bootstrap4"/>
-
+		<meta name="keywords" content="Boostrap"/>
 
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/owl.carousel.min.css">
