--- a/symfony-project/templates/dashboard/dashboardEnterprise.html.twig
+++ b/symfony-project/templates/dashboard/dashboardEnterprise.html.twig
@@ -92,13 +92,14 @@
 		<main class="col-span-1 lg:col-span-3">
 
 			<div
-				class="container my-5">
+				class="container my-2">
 				<!-- Section Profil -->
 				<div class="row">
 					{% for stat in [
-          { 'value': profile_views, 'icon': 'user-plus', 'label': 'Fiches de poste créées' },
-          { 'value': applications_sent, 'percentage': null, 'icon': 'dollar-sign', 'label': 'Vues de vos poste' },
-          { 'value': favorites_count, 'percentage': null, 'icon': 'file-plus', 'label': 'profil ajoutées en favoris' }         
+          { 'value': profile_views, 'icon': 'bi bi-file-post text-primary', 'label': 'Fiches de poste créées' },
+        { 'value': applications_sent, 'percentage': null, 'icon': 'bi bi-eye text-primary', 'label': 'Vues de vos poste' },
+        { 'value': favorites_count, 'percentage': null, 'icon': 'bi bi-heart text-primary', 'label': 'Profil ajoutées en favoris' }         
+          
         ] %}
 						<div class="col-sm-6 col-lg-4 mb-4">
 							<div class="card card-custom">
@@ -106,6 +107,7 @@
 									<div class="d-flex align-items-center">
 										<div>
 											<div class="d-inline-flex align-items-center">
+											 <i class="{{ stat.icon }}" style="font-size: 2rem;line-height: 1;  padding-right: 10px;"></i>
 												<h2 class="text-dark mb-1 font-weight-bold text-3xl">{{ stat.value }}</h2>
 											</div>
 											<h6 class="text-muted font-weight-normal mb-0 w-100 text-truncate text-lg">{{ stat.label }}</h6>
