modif avant revert

--- a/symfony-project/templates/offre/detail.html.twig
+++ b/symfony-project/templates/offre/detail.html.twig
@@ -30,7 +30,7 @@
 						<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/b/b5/Capgemini_Logo.svg/120px-Capgemini_Logo.svg.png?20190416190508 alt=alt="Offre Image" class="card-">
 					</div>
 					<div>
-						<h5 class="mb-1 fw-bold">{{ company.nom }}</h5>
+						<h5 class="mb-1 fw-bold">{{ enterprise.nom }}</h5>
 					</div>
 				</div>
 
