--- a/symfony-project/templates/company/dev-info.html.twig
+++ b/symfony-project/templates/company/dev-info.html.twig
@@ -43,26 +43,37 @@
 
                 </div>
 
-                <!-- Section droite -->
-                <div class="col-md-8 p-4"> <!-- Réduire le padding de la section droite -->
-                    <div>
-                        <h4 style="font-weight: 700; font-size: 1.2rem; margin-top: 30px;">
-                            <i class="bi bi-person-fill"></i>
-                            À PROPOS DE MOI</h4>
-                        <p style="font-size: 0.9rem;">{{ developer.bio }}</p> <!-- Texte plus petit -->
-                    </div>
-                    <hr>
-                    
+					<!-- Section droite -->
+					<div
+						class="col-md-8 p-4">
+						<!-- Réduire le padding de la section droite -->
+						<div>
+							<h4 style="font-weight: 700; font-size: 1.2rem; margin-top: 30px;">
+								<i class="bi bi-person-fill"></i>
+								À PROPOS DE MOI</h4>
+							<p style="font-size: 0.9rem;">{{ developer.bio }}</p>
+							<!-- Texte plus petit -->
+						</div>
+						<hr>
 
-                    {# <div class="p-3">
-                        <button class="btn btn-primary" style="font-size: 0.9rem;">
-                            <i class="bi bi-chat-dots"></i> Contacter</button>
-                    </div> #}
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+						<div class="mb-3">
+							<button onclick="history.back()" class="btn btn-primary" style="font-size: 0.9rem;">
+								<i class="bi bi-arrow-left"></i>
+								Retour
+							</button>
+						</div>
+						{# <div class="p-3">
+						                        <button class="btn btn-primary" style="font-size: 0.9rem;">
+						                            <i class="bi bi-chat-dots"></i> Contacter</button>
+						                    </div> #}
+					</div>
+				</div>
+
+			</div>
+
+		</div>
+
+	</div>
 
 {% endblock %}
 
